test/libyul/yulSyntaxTests/number_literals_4.yul
{
	let x := 67.235
}
// ----
// ParserError 4828: (12-18): Invalid number literal.
